--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.0.5",
+    "sharp": "^0.34.3",
     "sweetalert2": "^11.9.0",
     "swiper": "~8.4.7",
     "video.js": "^8.6.1",
