--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-persist-client": "^5.85.6",
     "@types/fslightbox-react": "^1.7.6",
     "@types/swiper": "^6.0.0",
+    "@vercel/speed-insights": "^1.3.1",
     "bootstrap": "^5.3.2",
     "choices.js": "^10.2.0",
     "cookies-next": "^4.3.0",
